<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.ConfigActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/config_title"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_password_length"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_length"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent" />

            <EditText
                android:id="@+id/et_password_length"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:hint="16"
                app:layout_constraintTop_toBottomOf="@+id/tv_password_length"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <CheckBox
                android:id="@+id/cb_lowercase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/include_lowercase"
                android:checked="true"
                app:layout_constraintTop_toBottomOf="@+id/et_password_length"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/cb_uppercase"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/include_uppercase"
                android:checked="true"
                app:layout_constraintTop_toBottomOf="@+id/cb_lowercase"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/cb_digits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/include_digits"
                android:checked="true"
                app:layout_constraintTop_toBottomOf="@+id/cb_uppercase"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" />

            <CheckBox
                android:id="@+id/cb_special"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/include_special"
                android:checked="true"
                app:layout_constraintTop_toBottomOf="@+id/cb_digits"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_unlock_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/unlock_duration"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/cb_special"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent" />

            <Spinner
                android:id="@+id/sp_unlock_duration"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/tv_unlock_duration"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btn_save_config"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/save_config"
                android:backgroundTint="@color/purple_500"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/sp_unlock_duration"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/btn_view_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="查看历史密码"
                android:backgroundTint="@color/purple_500"
                android:textColor="@color/white"
                app:layout_constraintTop_toBottomOf="@+id/btn_save_config"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
